Created new levels for training with blackouts

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-08T16:28:10.341874Z",
-     "start_time": "2019-10-08T16:28:10.324714Z"
+     "end_time": "2019-10-09T16:10:13.580765Z",
+     "start_time": "2019-10-09T16:10:13.560294Z"
     }
    },
    "outputs": [],
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-08T16:38:01.038405Z",
-     "start_time": "2019-10-08T16:38:01.025650Z"
+     "end_time": "2019-10-09T16:10:14.279533Z",
+     "start_time": "2019-10-09T16:10:14.013817Z"
     }
    },
    "outputs": [],
@@ -81,7 +81,7 @@
     "    create_arena_with_obstacles, create_center_blocked_arena, create_arena_splitted_in_two,\n",
     "    create_arena_splitted_in_four, create_arena_splitted_in_two_with_path_blocked\n",
     ")\n",
-    "\"\"\"\n",
+    "\n",
     "from orangutan.arenas.avoidance import (\n",
     "    create_arena_with_obstacles_and_deathzones,\n",
     "    create_center_blocked_arena,\n",
@@ -89,7 +89,7 @@
     "    create_arena_splitted_in_four,\n",
     "    create_arena_splitted_in_two_with_path_blocked\n",
     ")\n",
-    "\n",
+    "\"\"\"\n",
     "from orangutan.arenas.generation import generate_arena_config"
    ]
   },
@@ -3725,6 +3725,161 @@
     "    print(len(arena_config.arenas))\n",
     "    with open('%s/%02d.yaml' % (folderpath, idx), 'w') as f:\n",
     "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-09T16:12:26.223176Z",
+     "start_time": "2019-10-09T16:11:04.179944Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "2330\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "2330\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "2330\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "2330\n"
+     ]
+    }
+   ],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_014_fpoagi'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "for idx in range(4):\n",
+    "    arena_config = generate_arena_config(t=5000, n=10)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%02d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-09T15:48:11.885115Z",
+     "start_time": "2019-10-09T15:48:11.872334Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21888412017167383"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(311+199)/2330"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-09T15:47:26.495351Z",
+     "start_time": "2019-10-09T15:47:26.482361Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.28"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "14/50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-09T15:55:11.122364Z",
+     "start_time": "2019-10-09T15:55:11.109844Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "233"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(31+64+48*2+7+35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-09T15:47:39.869174Z",
+     "start_time": "2019-10-09T15:47:39.858365Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13304721030042918"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "31/(31+64+48*2+7+35)"
    ]
   },
   {
