First version of walls maze that generates a random maze

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-09T16:10:13.580765Z",
-     "start_time": "2019-10-09T16:10:13.560294Z"
+     "end_time": "2019-10-12T06:48:05.004768Z",
+     "start_time": "2019-10-12T06:48:04.985646Z"
     }
    },
    "outputs": [],
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-09T16:10:14.279533Z",
-     "start_time": "2019-10-09T16:10:14.013817Z"
+     "end_time": "2019-10-12T06:48:22.345675Z",
+     "start_time": "2019-10-12T06:48:22.333338Z"
     }
    },
    "outputs": [],
@@ -90,6 +90,7 @@
     "    create_arena_splitted_in_two_with_path_blocked\n",
     ")\n",
     "\"\"\"\n",
+    "from orangutan.arenas.spatial_reasoning import create_arena_with_walls_maze\n",
     "from orangutan.arenas.generation import generate_arena_config"
    ]
   },
@@ -3891,18 +3892,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-08T16:38:04.427674Z",
-     "start_time": "2019-10-08T16:38:04.407796Z"
+     "end_time": "2019-10-12T07:12:31.472791Z",
+     "start_time": "2019-10-12T07:12:31.380308Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_arena_splitted_in_two_with_path_blocked(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_with_walls_maze(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
