--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T08:17:49.787746Z",
-     "start_time": "2019-10-12T08:17:49.765850Z"
+     "end_time": "2019-10-12T09:07:40.723912Z",
+     "start_time": "2019-10-12T09:07:40.694660Z"
     }
    },
    "outputs": [],
@@ -57,8 +57,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T08:17:50.353595Z",
-     "start_time": "2019-10-12T08:17:50.046873Z"
+     "end_time": "2019-10-12T09:07:42.090674Z",
+     "start_time": "2019-10-12T09:07:41.810753Z"
     }
    },
    "outputs": [],
@@ -90,7 +90,7 @@
     "    create_arena_splitted_in_two_with_path_blocked\n",
     ")\n",
     "\"\"\"\n",
-    "from orangutan.arenas.spatial_reasoning import create_arena_with_walls_maze\n",
+    "from orangutan.arenas.spatial_reasoning import create_arena_with_walls_maze, create_arena_with_death_maze\n",
     "from orangutan.arenas.generation import generate_arena_config"
    ]
   },
@@ -3892,18 +3892,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T08:48:49.804924Z",
-     "start_time": "2019-10-12T08:48:49.752263Z"
+     "end_time": "2019-10-12T09:09:38.159881Z",
+     "start_time": "2019-10-12T09:09:38.129061Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_arena_with_walls_maze(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_with_death_maze(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
