create_arena_with_death_maze ready

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T09:07:40.723912Z",
-     "start_time": "2019-10-12T09:07:40.694660Z"
+     "end_time": "2019-10-12T10:50:37.001051Z",
+     "start_time": "2019-10-12T10:50:36.982954Z"
     }
    },
    "outputs": [],
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T09:07:42.090674Z",
-     "start_time": "2019-10-12T09:07:41.810753Z"
+     "end_time": "2019-10-12T10:50:37.889671Z",
+     "start_time": "2019-10-12T10:50:37.594625Z"
     }
    },
    "outputs": [],
@@ -3556,14 +3556,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Single file with all categories using weights"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
     "To do that I have prepared a new script to generate levels.\n",
@@ -3579,6 +3583,7 @@
      "end_time": "2019-10-05T09:26:47.341323Z",
      "start_time": "2019-10-05T09:26:15.589271Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3608,7 +3613,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-06T18:03:20.094241Z",
      "start_time": "2019-10-06T18:02:44.890353Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3637,7 +3643,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-07T17:40:17.880889Z",
      "start_time": "2019-10-07T17:39:20.133234Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3684,7 +3691,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-08T16:47:10.230531Z",
      "start_time": "2019-10-08T16:45:50.965063Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3735,7 +3743,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-09T16:12:26.223176Z",
      "start_time": "2019-10-09T16:11:04.179944Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3784,106 +3793,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-10-09T15:48:11.885115Z",
-     "start_time": "2019-10-09T15:48:11.872334Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.21888412017167383"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(311+199)/2330"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-10-09T15:47:26.495351Z",
-     "start_time": "2019-10-09T15:47:26.482361Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.28"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "14/50"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-10-09T15:55:11.122364Z",
-     "start_time": "2019-10-09T15:55:11.109844Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "233"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(31+64+48*2+7+35)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-10-09T15:47:39.869174Z",
-     "start_time": "2019-10-09T15:47:39.858365Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.13304721030042918"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "31/(31+64+48*2+7+35)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3892,11 +3801,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T09:09:38.159881Z",
-     "start_time": "2019-10-12T09:09:38.129061Z"
+     "end_time": "2019-10-12T10:51:58.213110Z",
+     "start_time": "2019-10-12T10:51:58.186464Z"
     }
    },
    "outputs": [],
