progress in platform maze

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T10:50:37.889671Z",
-     "start_time": "2019-10-12T10:50:37.594625Z"
+     "end_time": "2019-10-12T11:03:34.059201Z",
+     "start_time": "2019-10-12T11:03:34.015150Z"
     }
    },
    "outputs": [],
@@ -90,7 +90,9 @@
     "    create_arena_splitted_in_two_with_path_blocked\n",
     ")\n",
     "\"\"\"\n",
-    "from orangutan.arenas.spatial_reasoning import create_arena_with_walls_maze, create_arena_with_death_maze\n",
+    "from orangutan.arenas.spatial_reasoning import (\n",
+    "    create_arena_with_walls_maze, create_arena_with_death_maze,\n",
+    "    create_arena_with_platform_maze)\n",
     "from orangutan.arenas.generation import generate_arena_config"
    ]
   },
@@ -3801,18 +3803,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T10:51:58.213110Z",
-     "start_time": "2019-10-12T10:51:58.186464Z"
+     "end_time": "2019-10-12T11:40:21.338315Z",
+     "start_time": "2019-10-12T11:40:21.289761Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────┬───────┐\n",
+      "│       │       │\n",
+      "│   ╷   └───┐   │\n",
+      "│   │       │   │\n",
+      "│   ├───────┘   │\n",
+      "│   │           │\n",
+      "│   ╵   ┌───╴   │\n",
+      "│       │       │\n",
+      "└───────┴───────┘\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_arena_with_death_maze(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_with_platform_maze(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
