Added spatial reasoning levels to generation

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -3558,18 +3558,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Single file with all categories using weights"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
     "To do that I have prepared a new script to generate levels.\n",
@@ -3585,7 +3581,6 @@
      "end_time": "2019-10-05T09:26:47.341323Z",
      "start_time": "2019-10-05T09:26:15.589271Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3615,8 +3610,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-06T18:03:20.094241Z",
      "start_time": "2019-10-06T18:02:44.890353Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3645,8 +3639,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-07T17:40:17.880889Z",
      "start_time": "2019-10-07T17:39:20.133234Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3693,8 +3686,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-08T16:47:10.230531Z",
      "start_time": "2019-10-08T16:45:50.965063Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3745,8 +3737,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-09T16:12:26.223176Z",
      "start_time": "2019-10-09T16:11:04.179944Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3795,8 +3786,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-13T05:44:25.159982Z",
+     "start_time": "2019-10-13T05:44:21.223004Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n"
+     ]
+    }
+   ],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_015_fpoasgi'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "for idx in range(1):\n",
+    "    arena_config = generate_arena_config(t=500, n=1)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%02d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating arenas for obstacles category"
    ]
@@ -3808,7 +3836,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-12T18:02:01.763929Z",
      "start_time": "2019-10-12T18:02:01.729120Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3840,7 +3869,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
