Added new tests to obstacles category

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li><li><span><a href=\"#Creating-arenas-for-obstacles-category\" data-toc-modified-id=\"Creating-arenas-for-obstacles-category-1.12\">Creating arenas for obstacles category</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li><li><span><a href=\"#Creating-arenas-for-obstacles-category\" data-toc-modified-id=\"Creating-arenas-for-obstacles-category-1.12\">Creating arenas for obstacles category</a></span></li><li><span><a href=\"#Creating-new-tests\" data-toc-modified-id=\"Creating-new-tests-1.13\">Creating new tests</a></span><ul class=\"toc-item\"><li><span><a href=\"#Obstacles\" data-toc-modified-id=\"Obstacles-1.13.1\">Obstacles</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -31,22 +31,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T10:50:37.001051Z",
-     "start_time": "2019-10-12T10:50:36.982954Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-14T16:39:03.566440Z",
+     "start_time": "2019-10-14T16:39:03.555259Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -57,13 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-12T11:03:34.059201Z",
-     "start_time": "2019-10-12T11:03:34.015150Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-14T16:48:32.515211Z",
+     "start_time": "2019-10-14T16:48:32.452819Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -71,6 +67,7 @@
     "import numpy as np\n",
     "import glob\n",
     "import os\n",
+    "from tqdm import tqdm_notebook as tqdm\n",
     "\n",
     "from animalai.envs.arena_config import Vector3, RGB, Item, Arena, ArenaConfig\n",
     "\n",
@@ -3562,14 +3559,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Single file with all categories using weights"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
     "To do that I have prepared a new script to generate levels.\n",
@@ -3585,6 +3586,7 @@
      "end_time": "2019-10-05T09:26:47.341323Z",
      "start_time": "2019-10-05T09:26:15.589271Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3614,7 +3616,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-06T18:03:20.094241Z",
      "start_time": "2019-10-06T18:02:44.890353Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3643,7 +3646,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-07T17:40:17.880889Z",
      "start_time": "2019-10-07T17:39:20.133234Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3690,7 +3694,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-08T16:47:10.230531Z",
      "start_time": "2019-10-08T16:45:50.965063Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3741,7 +3746,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-09T16:12:26.223176Z",
      "start_time": "2019-10-09T16:11:04.179944Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3796,7 +3802,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T05:44:25.159982Z",
      "start_time": "2019-10-13T05:44:21.223004Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3827,7 +3834,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -3838,7 +3847,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T16:22:14.899202Z",
      "start_time": "2019-10-13T16:14:08.641481Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -4890,7 +4900,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating arenas for obstacles category"
    ]
@@ -4902,7 +4914,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T07:15:44.428476Z",
      "start_time": "2019-10-13T07:15:44.114884Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -4915,11 +4928,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating new tests "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obstacles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T16:46:17.850693Z",
+     "start_time": "2019-10-14T16:46:17.839210Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from orangutan.arenas.obstacles import (\n",
+    "    create_arena_with_obstacles,\n",
+    "    create_center_blocked_arena,\n",
+    "    create_arena_splitted_in_two,\n",
+    "    create_arena_splitted_in_four,\n",
+    "    create_arena_splitted_in_two_with_path_blocked\n",
+    ")\n",
+    "func_list = [\n",
+    "    create_arena_with_obstacles,\n",
+    "    create_center_blocked_arena,\n",
+    "    create_arena_splitted_in_two,\n",
+    "    create_arena_splitted_in_four,\n",
+    "    create_arena_splitted_in_two_with_path_blocked\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T16:44:55.822076Z",
+     "start_time": "2019-10-14T16:44:55.809890Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "folder_path = \"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/scripts/test_submission/configs/03_obstacles\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T16:48:36.964219Z",
+     "start_time": "2019-10-14T16:48:36.222154Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b8cc4cceb934499390afd350803b794f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=5), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arena_with_obstacles\n",
+      "center_blocked_arena\n",
+      "arena_splitted_in_two\n",
+      "arena_splitted_in_four\n",
+      "arena_splitted_in_two_with_path_blocked\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for func in tqdm(func_list):\n",
+    "    name = '_'.join(func.__name__.split('_')[1:])\n",
+    "    print(name)\n",
+    "    for idx in range(10):\n",
+    "        arena_config = ArenaConfig()\n",
+    "        arena_config.arenas[0] = func(t=500)\n",
+    "        filepath = os.path.join(folder_path, '%s_%02d.yaml' % (name, idx))\n",
+    "        with open(filepath, 'w') as f:\n",
+    "            yaml.dump(arena_config, f)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folderpath = '/media/guillermo/Data/Kaggle/animalai/agents/114_megatrain/data/train_015_fpoasgi_500'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "for idx in range(128):\n",
+    "    arena_config = generate_arena_config(t=500, n=1)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%03d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
   }
  ],
  "metadata": {
